<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />

    <!-- Placeholder for FAB spacing -->
    <item
        android:id="@+id/navigation_placeholder"
        android:enabled="false"
        android:icon="@android:color/transparent"
        android:title="" />

    <item
        android:id="@+id/navigation_completed"
        android:icon="@drawable/ic_completed"
        android:title="@string/nav_completed" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
