<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_tasks">

    <!-- Tasks Fragment (Home) -->
    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.rizowan.taskr.ui.tasks.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_tasks_to_addEditTask"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Calendar Fragment -->
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.rizowan.taskr.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_calendar_to_addEditTask"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Completed Fragment -->
    <fragment
        android:id="@+id/navigation_completed"
        android:name="com.rizowan.taskr.ui.completed.CompletedFragment"
        android:label="@string/nav_completed"
        tools:layout="@layout/fragment_completed" />

    <!-- Settings Fragment -->
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rizowan.taskr.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Add/Edit Task Fragment -->
    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.rizowan.taskr.ui.addedittask.AddEditTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_add_edit_task">
        <argument
            android:name="taskId"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="preSelectedDate"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <!-- About Fragment -->
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.rizowan.taskr.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>
